fix: h2 fix sizes on mobile

--- a/styles/main-for-you.css
+++ b/styles/main-for-you.css
@@ -7,7 +7,9 @@
 }
 
 #for-you h2 {
-    @apply text-6xl 
+    @apply 
+    text-5xl
+    lg:text-6xl 
     font-black 
     text-orange-950 
     tracking-tight 
