--- a/styles/main-for-your-business.css
+++ b/styles/main-for-your-business.css
@@ -16,7 +16,9 @@
 }
 
 #for-your-business h2 {
-    @apply text-6xl 
+    @apply 
+    text-5xl
+    lg:text-6xl 
     font-black 
     text-orange-950 
     tracking-tight 
